[gd_scene load_steps=6 format=3 uid="uid://dm3k8fek8io8h"]

[ext_resource type="Script" path="res://player.gd" id="1_lb68p"]
[ext_resource type="Texture2D" uid="uid://d00ji8ggimwnm" path="res://Assets/Spaceship_06_RED.png" id="2_ifmj3"]
[ext_resource type="Texture2D" uid="uid://f6e5f0vowie" path="res://Assets/Flame_01.png" id="3_q3w25"]
[ext_resource type="Texture2D" uid="uid://cqi3yq8ko7sxl" path="res://Assets/Flame_02.png" id="4_yn207"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bhwyc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yn207")
}, {
"duration": 1.0,
"texture": ExtResource("3_q3w25")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="Player" type="Node2D"]
script = ExtResource("1_lb68p")

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5185, 0.5145)
texture = ExtResource("2_ifmj3")

[node name="Area2D" type="Area2D" parent="PlayerSprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerSprite/Area2D"]
polygon = PackedVector2Array(-14, -127, -14, -126, -18, -126, -18, -125, -21, -125, -21, -124, -24, -124, -24, -123, -26, -123, -26, -122, -28, -122, -28, -121, -29, -121, -29, -120, -31, -120, -31, -119, -32, -119, -32, -118, -33, -118, -33, -117, -35, -117, -35, -116, -36, -116, -36, -115, -37, -115, -37, -114, -38, -114, -38, -113, -39, -113, -39, -112, -40, -112, -40, -110, -41, -110, -41, -109, -42, -109, -42, -108, -43, -108, -43, -106, -44, -106, -44, -104, -45, -104, -45, -102, -46, -102, -46, -100, -47, -100, -47, -98, -48, -98, -48, -94, -49, -94, -49, -89, -50, -89, -50, -77, -51, -77, -51, -102, -52, -102, -52, -103, -53, -103, -53, -104, -54, -104, -54, -105, -59, -105, -59, -104, -60, -104, -60, -103, -61, -103, -61, -77, -62, -77, -62, -103, -63, -103, -63, -104, -64, -104, -64, -105, -69, -105, -69, -104, -70, -104, -70, -103, -71, -103, -71, -102, -72, -102, -72, -76, -74, -76, -74, -75, -75, -75, -75, -73, -76, -73, -76, -55, -75, -55, -75, -50, -74, -50, -74, -48, -73, -48, -73, -46, -72, -46, -72, -44, -71, -44, -71, -43, -70, -43, -70, -42, -69, -42, -69, -41, -68, -41, -68, -40, -67, -40, -67, -39, -66, -39, -66, -38, -65, -38, -65, -37, -63, -37, -63, -36, -61, -36, -61, -35, -58, -35, -58, -34, -50, -34, -50, -29, -49, -29, -49, -24, -48, -24, -48, -21, -47, -21, -47, -18, -46, -18, -46, -16, -45, -16, -45, -14, -44, -14, -44, -12, -43, -12, -43, -11, -42, -11, -42, -9, -41, -9, -41, -8, -40, -8, -40, -7, -39, -7, -39, -6, -38, -6, -38, -5, -37, -5, -37, -4, -36, -4, -36, 9, -38, 9, -38, 10, -40, 10, -40, 11, -42, 11, -42, 12, -44, 12, -44, 13, -46, 13, -46, 14, -48, 14, -48, 15, -50, 15, -50, 16, -52, 16, -52, 17, -55, 17, -55, 18, -57, 18, -57, 19, -59, 19, -59, 20, -61, 20, -61, 21, -63, 21, -63, 22, -65, 22, -65, 23, -67, 23, -67, 24, -69, 24, -69, 25, -72, 25, -72, 26, -74, 26, -74, 27, -76, 27, -76, 28, -78, 28, -78, 29, -80, 29, -80, 30, -82, 30, -82, 31, -84, 31, -84, 32, -86, 32, -86, 33, -89, 33, -89, 34, -91, 34, -91, 35, -93, 35, -93, 36, -95, 36, -95, 37, -97, 37, -97, 38, -99, 38, -99, 39, -101, 39, -101, 40, -103, 40, -103, 41, -106, 41, -106, 42, -108, 42, -108, 9, -109, 9, -109, 7, -110, 7, -110, 6, -112, 6, -112, 5, -114, 5, -114, 1, -115, 1, -115, -1, -116, -1, -116, -3, -117, -3, -117, -5, -118, -5, -118, -6, -119, -6, -119, -7, -120, -7, -120, -8, -121, -8, -121, -9, -123, -9, -123, -10, -125, -10, -125, -11, -135, -11, -135, -10, -137, -10, -137, -9, -138, -9, -138, -8, -140, -8, -140, -7, -141, -7, -141, -6, -142, -6, -142, -4, -143, -4, -143, -3, -144, -3, -144, -1, -145, -1, -145, 2, -146, 2, -146, 5, -148, 5, -148, 6, -149, 6, -149, 7, -150, 7, -150, 8, -151, 8, -151, 10, -152, 10, -152, 120, -151, 120, -151, 122, -150, 122, -150, 123, -149, 123, -149, 124, -148, 124, -148, 125, -147, 125, -147, 126, -145, 126, -145, 127, -115, 127, -115, 126, -113, 126, -113, 125, -111, 125, -111, 124, -110, 124, -110, 122, -109, 122, -109, 121, -108, 121, -108, 84, -105, 84, -105, 83, -103, 83, -103, 82, -101, 82, -101, 81, -99, 81, -99, 80, -97, 80, -97, 79, -95, 79, -95, 78, -93, 78, -93, 77, -90, 77, -90, 76, -88, 76, -88, 75, -86, 75, -86, 74, -84, 74, -84, 73, -82, 73, -82, 72, -80, 72, -80, 71, -78, 71, -78, 70, -76, 70, -76, 69, -73, 69, -73, 68, -71, 68, -71, 67, -69, 67, -69, 66, -67, 66, -67, 65, -65, 65, -65, 64, -63, 64, -63, 63, -61, 63, -61, 62, -58, 62, -58, 61, -56, 61, -56, 60, -54, 60, -54, 59, -52, 59, -52, 58, -50, 58, -50, 57, -48, 57, -48, 56, -46, 56, -46, 55, -43, 55, -43, 54, -41, 54, -41, 53, -39, 53, -39, 52, -37, 52, -37, 51, -36, 51, -36, 56, -35, 56, -35, 62, -34, 62, -34, 65, -33, 65, -33, 68, -32, 68, -32, 70, -31, 70, -31, 71, -30, 71, -30, 73, -29, 73, -29, 74, -28, 74, -28, 76, -27, 76, -27, 77, -26, 77, -26, 78, -25, 78, -25, 79, -24, 79, -24, 80, -23, 80, -23, 81, -21, 81, -21, 82, -20, 82, -20, 83, -18, 83, -18, 84, -17, 84, -17, 85, -15, 85, -15, 86, -12, 86, -12, 87, -10, 87, -10, 85, -9, 85, -9, 83, -8, 83, -8, 82, -7, 82, -7, 81, -6, 81, -6, 80, -5, 80, -5, 79, -2, 79, -2, 78, 2, 78, 2, 79, 5, 79, 5, 80, 6, 80, 6, 81, 7, 81, 7, 82, 8, 82, 8, 83, 9, 83, 9, 85, 10, 85, 10, 87, 12, 87, 12, 86, 15, 86, 15, 85, 17, 85, 17, 84, 18, 84, 18, 83, 20, 83, 20, 82, 21, 82, 21, 81, 23, 81, 23, 80, 24, 80, 24, 79, 25, 79, 25, 78, 26, 78, 26, 77, 27, 77, 27, 76, 28, 76, 28, 74, 29, 74, 29, 73, 30, 73, 30, 71, 31, 71, 31, 70, 32, 70, 32, 68, 33, 68, 33, 65, 34, 65, 34, 62, 35, 62, 35, 56, 36, 56, 36, 51, 37, 51, 37, 52, 39, 52, 39, 53, 41, 53, 41, 54, 43, 54, 43, 55, 46, 55, 46, 56, 48, 56, 48, 57, 50, 57, 50, 58, 52, 58, 52, 59, 54, 59, 54, 60, 56, 60, 56, 61, 58, 61, 58, 62, 61, 62, 61, 63, 63, 63, 63, 64, 65, 64, 65, 65, 67, 65, 67, 66, 69, 66, 69, 67, 71, 67, 71, 68, 73, 68, 73, 69, 76, 69, 76, 70, 78, 70, 78, 71, 80, 71, 80, 72, 82, 72, 82, 73, 84, 73, 84, 74, 86, 74, 86, 75, 88, 75, 88, 76, 90, 76, 90, 77, 93, 77, 93, 78, 95, 78, 95, 79, 97, 79, 97, 80, 99, 80, 99, 81, 101, 81, 101, 82, 103, 82, 103, 83, 105, 83, 105, 84, 108, 84, 108, 121, 109, 121, 109, 122, 110, 122, 110, 124, 111, 124, 111, 125, 113, 125, 113, 126, 115, 126, 115, 127, 145, 127, 145, 126, 147, 126, 147, 125, 148, 125, 148, 124, 149, 124, 149, 123, 150, 123, 150, 122, 151, 122, 151, 120, 152, 120, 152, 10, 151, 10, 151, 8, 150, 8, 150, 7, 149, 7, 149, 6, 148, 6, 148, 5, 146, 5, 146, 2, 145, 2, 145, -1, 144, -1, 144, -3, 143, -3, 143, -4, 142, -4, 142, -6, 141, -6, 141, -7, 140, -7, 140, -8, 138, -8, 138, -9, 137, -9, 137, -10, 135, -10, 135, -11, 125, -11, 125, -10, 123, -10, 123, -9, 121, -9, 121, -8, 120, -8, 120, -7, 119, -7, 119, -6, 118, -6, 118, -5, 117, -5, 117, -3, 116, -3, 116, -1, 115, -1, 115, 1, 114, 1, 114, 5, 112, 5, 112, 6, 110, 6, 110, 7, 109, 7, 109, 9, 108, 9, 108, 42, 106, 42, 106, 41, 103, 41, 103, 40, 101, 40, 101, 39, 99, 39, 99, 38, 97, 38, 97, 37, 95, 37, 95, 36, 93, 36, 93, 35, 91, 35, 91, 34, 89, 34, 89, 33, 86, 33, 86, 32, 84, 32, 84, 31, 82, 31, 82, 30, 80, 30, 80, 29, 78, 29, 78, 28, 76, 28, 76, 27, 74, 27, 74, 26, 72, 26, 72, 25, 69, 25, 69, 24, 67, 24, 67, 23, 65, 23, 65, 22, 63, 22, 63, 21, 61, 21, 61, 20, 59, 20, 59, 19, 57, 19, 57, 18, 55, 18, 55, 17, 52, 17, 52, 16, 50, 16, 50, 15, 48, 15, 48, 14, 46, 14, 46, 13, 44, 13, 44, 12, 42, 12, 42, 11, 40, 11, 40, 10, 38, 10, 38, 9, 36, 9, 36, -4, 37, -4, 37, -5, 38, -5, 38, -6, 39, -6, 39, -7, 40, -7, 40, -8, 41, -8, 41, -9, 42, -9, 42, -11, 43, -11, 43, -12, 44, -12, 44, -14, 45, -14, 45, -16, 46, -16, 46, -18, 47, -18, 47, -21, 48, -21, 48, -24, 49, -24, 49, -29, 50, -29, 50, -34, 61, -34, 61, -35, 63, -35, 63, -36, 65, -36, 65, -37, 66, -37, 66, -38, 67, -38, 67, -39, 68, -39, 68, -40, 69, -40, 69, -41, 70, -41, 70, -42, 71, -42, 71, -44, 72, -44, 72, -46, 73, -46, 73, -48, 74, -48, 74, -50, 75, -50, 75, -55, 76, -55, 76, -73, 75, -73, 75, -75, 74, -75, 74, -76, 72, -76, 72, -102, 71, -102, 71, -103, 70, -103, 70, -104, 69, -104, 69, -105, 64, -105, 64, -104, 63, -104, 63, -103, 62, -103, 62, -77, 61, -77, 61, -103, 60, -103, 60, -104, 59, -104, 59, -105, 54, -105, 54, -104, 53, -104, 53, -103, 52, -103, 52, -102, 51, -102, 51, -77, 50, -77, 50, -89, 49, -89, 49, -94, 48, -94, 48, -98, 47, -98, 47, -100, 46, -100, 46, -102, 45, -102, 45, -104, 44, -104, 44, -106, 43, -106, 43, -108, 42, -108, 42, -109, 41, -109, 41, -110, 40, -110, 40, -112, 39, -112, 39, -113, 38, -113, 38, -114, 37, -114, 37, -115, 36, -115, 36, -116, 35, -116, 35, -117, 33, -117, 33, -118, 32, -118, 32, -119, 31, -119, 31, -120, 29, -120, 29, -121, 28, -121, 28, -122, 26, -122, 26, -123, 24, -123, 24, -124, 21, -124, 21, -125, 18, -125, 18, -126, 14, -126, 14, -127)

[node name="LeftThruster" type="AnimatedSprite2D" parent="."]
position = Vector2(-68, 96)
scale = Vector2(0.640094, 0.726529)
sprite_frames = SubResource("SpriteFrames_bhwyc")
autoplay = "default"

[node name="RightThruster" type="AnimatedSprite2D" parent="."]
position = Vector2(68, 96)
scale = Vector2(0.640094, 0.726529)
sprite_frames = SubResource("SpriteFrames_bhwyc")
autoplay = "default"

[node name="MainThruster" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 74)
scale = Vector2(0.640094, 0.726529)
sprite_frames = SubResource("SpriteFrames_bhwyc")
autoplay = "default"
